[sync] Ignore id 0 when merging pre-populated turls

There are scenarios where an existing local turl can exist and have
prepopulate_id 0, but this isn't a meaningful conflict. We should ignore
these cases.

BUG=765759
R=skym@chromium.org, vasilii@chromium.org

Change-Id: I5b7daa295fb7d3f1bad8edf6dea059b6bd0f7001