components/search_engines/template_url_service.cc
@@ -2200,7 +2200,7 @@ void TemplateURLService::MergeInSyncTemplateURL(
       // Remove the entry from the local data so it isn't pushed up to Sync.
       local_data->erase(guid);
     }
-  } else {
+  } else if (sync_turl->prepopulate_id() != 0) {
     // Check for a turl with a conflicting prepopulate_id. This detects the case
     // where the user changes a prepopulated engine's keyword on one client,
     // then begins syncing on another client.  We want to reflect this keyword
